--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 <div class="menu-block-wrap">
                                     <div class="text-center mb-4 pb-lg-2">
                                         <em class="text-white">Delicious Menu</em>
-                                        <h4 class="text-white">Breakfast</h4>
+                                        <h4 class="text-white">Bites</h4>
                                     </div>
 
                                     <div class="menu-block">
