--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </div>
 
                             <div class="col-lg-5 col-12 mt-4 mt-lg-0 mx-auto">
-                                <em class="text-white">Barista.co</em>
+                                <em class="text-white">Cafe world.co</em>
 
                                 <h2 class="text-white mb-3">Cafe KL</h2>
 
