--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <nav class="navbar navbar-expand-lg">                
                     <div class="container">
                         <a class="navbar-brand d-flex align-items-center" href="index.html">
-                            <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="Barista Cafe Template">
+                            <img src="images/coffee-beans.png" class="navbar-brand-image img-fluid" alt="Cafe world Template">
                             Cafe World
                         </a>
         
@@ -130,9 +130,9 @@
 
                                 <p class="text-white">The café had been in the town for as long as anyone could remember, and it had become a beloved institution among the locals.</p>
 
-                                <p class="text-white">The café was run by a friendly and hospitable couple, Mr. and Mrs. Johnson. Barista Cafe is free Bootstrap 5 HTML layout provided by <a rel="nofollow" href="https://www.tooplate.com" target="_blank">Tooplate</a>.</p>
+                                <p class="text-white">The café was run by a friendly and hospitable couple, Mr. and Mrs. Johnson. Cafe world is free Bootstrap 5 HTML layout provided by <a rel="nofollow" href="https://www.tooplate.com" target="_blank">Tooplate</a>.</p>
 
-                                <a href="#barista-team" class="smoothscroll btn custom-btn custom-border-btn mt-3 mb-4">Meet Baristas</a>
+                                <a href="#Cafe world-team" class="smoothscroll btn custom-btn custom-border-btn mt-3 mb-4">Meet Cafe world</a>
                             </div>
 
                         </div>
@@ -140,12 +140,12 @@
                 </section>
 
 
-                <section class="barista-section section-padding section-bg" id="barista-team">
+                <section class="Cafe worled-section section-padding section-bg" id="Cafe world-team">
                     <div class="container">
                         <div class="row justify-content-center">
 
                             <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
-                                <em class="text-white">Creative Baristas</em>
+                                <em class="text-white">Creative Cafe world</em>
 
                                 <h2 class="text-white">Meet People</h2>
                             </div>
@@ -210,7 +210,7 @@
                                         <div class="d-flex mt-auto mb-3">
                                             <h4 class="text-white mb-0">Michelle</h4>
 
-                                            <p class="badge ms-4"><em>Barista</em></p>
+                                            <p class="badge ms-4"><em>Cafe world</em></p>
                                         </div>
 
                                         <p class="text-white mb-0">your favourite coffee daily consectetur.</p>
@@ -643,7 +643,7 @@
                             </div>
 
                             <div class="col-lg-8 col-12 mt-4">
-                                <p class="copyright-text mb-0">Copyright © Barista Cafe 2048 
+                                <p class="copyright-text mb-0">Copyright © Cafe world 2048 
                                     - Design: <a rel="sponsored" href="https://www.tooplate.com" target="_blank">Tooplate</a></p>
                             </div>
                     </div>
