--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                                     <div class="menu-block">
                                         <div class="d-flex">
-                                            <h6>Pancakes</h6>
+                                            <h6>Coffee cookie</h6>
                                         
                                             <span class="underline"></span>
 
@@ -248,7 +248,7 @@
                                         </div>
 
                                         <div class="border-top mt-2 pt-2">
-                                            <small>Fresh brewed coffee and steamed milk</small>
+                                            <small>Fresh cookied stuffed with choco chips </small>
                                         </div>
                                     </div>
 
