--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
                                                 <img src="images/reviews/young-woman-with-round-glasses-yellow-sweater.jpg" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Sandra</h6>
-                                                    <em class="text-white"> Customers</em>
+                                                    <h6 class="text-white mb-0">Preethi</h6>
+                                                    <em class="text-white"> Customer</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>Delicious 😋  cookies, which I've never had. This is my best Cafe in my hometown</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
@@ -454,13 +454,13 @@
                                                 <img src="images/reviews/senior-man-white-sweater-eyeglasses.jpg" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Don</h6>
+                                                    <h6 class="text-white mb-0">Deepak</h6>
                                                     <em class="text-white"> Customers</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>Good ambience and nice for client meeting</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
@@ -485,13 +485,13 @@
                                                 <img src="images/reviews/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Olivia</h6>
+                                                    <h6 class="text-white mb-0">Anusha</h6>
                                                     <em class="text-white"> Customers</em>
                                                 </div>
                                             </div>
 
                                             <div class="reviews-block-info">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                <p>goog hospitality</p>
 
                                                 <div class="d-flex border-top pt-3 mt-4">
                                                     <strong class="text-white">4.5 <small class="ms-2">Rating</small></strong>
