--- a/index.html
+++ b/index.html
@@ -128,10 +128,9 @@
 
                                 <h2 class="text-white mb-3">Cafe KL</h2>
 
-                                <p class="text-white">The café had been in the town for as long as anyone could remember, and it had become a beloved institution among the locals.</p>
+                                <p class="text-white">Taste and See Coffee Shop and Gallery offers a unique coffee house environment unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee (although you are more than welcome to do that), we are a place where you can sit down and enjoy that tailor-made cup of coffee.</p>
 
-                                <p class="text-white">The café was run by a friendly and hospitable couple, Mr. and Mrs. Johnson. Cafe world is free Bootstrap 5 HTML layout provided by <a rel="nofollow" href="https://www.tooplate.com" target="_blank">Tooplate</a>.</p>
-
+                             
                                 <a href="#Cafe world-team" class="smoothscroll btn custom-btn custom-border-btn mt-3 mb-4">Meet Cafe world</a>
                             </div>
 
