--- a/index.html
+++ b/index.html
@@ -522,36 +522,9 @@
                                 <em class="text-white">Say Hello</em>
                                 <h2 class="text-white mb-4 pb-lg-2">Contact</h2>
                             </div>
-
-                            <div class="col-lg-6 col-12">
-                                <form action="#" method="post" class="custom-form contact-form" role="form">
-
-                                <div class="row">
-                                    
-                                    <div class="col-lg-6 col-12">
-                                        <label for="name" class="form-label">Name <sup class="text-danger">*</sup></label>
-
-                                        <input type="text" name="name" id="name" class="form-control" placeholder="Jackson" required="">
-                                    </div>
-
-                                    <div class="col-lg-6 col-12">
-                                        <label for="email" class="form-label">Email Address</label>
-
-                                        <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Jack@gmail.com" required="">
-                                    </div>
-
-                                    <div class="col-12">
-                                        <label for="message" class="form-label">How can we help?</label>
-
-                                        <textarea name="message" rows="4" class="form-control" id="message" placeholder="Message" required=""></textarea>
-                                        
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-5 col-12 mx-auto mt-3">
-                                    <button type="submit" class="form-control">Send Message</button>
-                                </div>
-                            </form>
+                            <div>
+                                <iframe frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.in/harshavardhanponthala2024/form/CustomerInteraction/formperma/i6CBXtmGXl-o7SgTq8BV4u9_YY7ksGhsbnMIXvtIRUI'></iframe>
+                            </div>
                             </div>
 
                             <div class="col-lg-6 col-12 mx-auto mt-5 mt-lg-0 ps-lg-5">
